--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,18 @@
 {
     "name": "laravel/homestead",
     "description": "A virtual machine for web artisans.",
+    "repositories": [
+        {
+            "type": "git",
+            "url": "git@github.com:pod-point/coding-standards.git"
+        }
+    ],
     "require": {
         "php": "^5.6 || ^7.0",
         "symfony/console": "~2.3|~3.0",
         "symfony/process": "~2.3|~3.0",
-        "symfony/yaml": "~2.3|~3.0"
+        "symfony/yaml": "~2.3|~3.0",
+        "pod-point/coding-standards": "^1.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^5.7 || ^6.0"
