--- a/resources/custom/php.ini
+++ b/resources/custom/php.ini
@@ -1931,3 +1931,9 @@ ldap.max_links = -1
 ; Local Variables:
 ; tab-width: 4
 ; End:
+
+[xdebug]
+zend_extension="/usr/lib/php/20160303/xdebug.so"
+xdebug.remote_enable=1
+xdebug.remote_handler=dbgp xdebug.remote_mode=req
+xdebug.remote_host=127.0.0.1 xdebug.remote_port=9000
