--- a/resources/custom/php.ini
+++ b/resources/custom/php.ini
@@ -1933,7 +1933,9 @@ ldap.max_links = -1
 ; End:
 
 [xdebug]
-zend_extension="/usr/lib/php/20160303/xdebug.so"
+zend_extension=/usr/lib/php/20160303/xdebug.so
 xdebug.remote_enable=1
-xdebug.remote_handler=dbgp xdebug.remote_mode=req
-xdebug.remote_host=127.0.0.1 xdebug.remote_port=9000
+xdebug.remote_handler=dbgp
+xdebug.remote_mode=req
+xdebug.remote_host=192.168.10.10
+xdebug.remote_port=9000
