--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: php
 
 php:
-  - 7.0
   - 7.1
   - 7.2
 
 before_script:
   - phpenv config-rm xdebug.ini
+  - composer config github-oauth.github.com ${COMPOSER_TOKEN}
   - composer install --no-interaction
 
 script:
