--- a/resources/localized/Vagrantfile
+++ b/resources/localized/Vagrantfile
@@ -1,20 +1,27 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
+#
+## Set global output colors
+#
+NC = "\033[0m"
+RED = "\033[0;31m"
+GREEN = "\033[0;32m"
+
 require 'json'
 require 'yaml'
 
 VAGRANTFILE_API_VERSION ||= "2"
-confDir = $confDir ||= File.expand_path("vendor/laravel/homestead", File.dirname(__FILE__))
+confDir = $confDir ||= File.expand_path(File.dirname(__FILE__))
 
-homesteadYamlPath = File.expand_path("Homestead.yaml", File.dirname(__FILE__))
-homesteadJsonPath = File.expand_path("Homestead.json", File.dirname(__FILE__))
-afterScriptPath = "after.sh"
-aliasesPath = "aliases"
+homesteadYamlPath = File.join(confDir, "files", "Homestead.yaml")
+homesteadJsonPath = File.join(confDir, "files", "Homestead.json")
+afterScriptPath = File.join(confDir, "files", "after.sh")
+aliasesPath = File.join(confDir, "files", "aliases")
 
-require File.expand_path(confDir + '/scripts/homestead.rb')
+require File.expand_path(File.dirname(__FILE__) + '/scripts/homestead.rb')
 
-Vagrant.require_version '>= 1.9.0'
+Vagrant.require_version '>= 2.1.0'
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     if File.exist? aliasesPath then
@@ -27,7 +34,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     if File.exist? homesteadYamlPath then
         settings = YAML::load(File.read(homesteadYamlPath))
     elsif File.exist? homesteadJsonPath then
-        settings = JSON.parse(File.read(homesteadJsonPath))
+        settings = JSON::parse(File.read(homesteadJsonPath))
     else
         abort "Homestead settings file not found in #{confDir}"
     end
@@ -35,10 +42,14 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     Homestead.configure(config, settings)
 
     if File.exist? afterScriptPath then
-        config.vm.provision "shell", path: afterScriptPath, privileged: false, keep_color: true
+        config.vm.provision "shell", path: afterScriptPath, privileged: true, keep_color: true
     end
 
-    if defined? VagrantPlugins::HostsUpdater
+    if Vagrant.has_plugin?('vagrant-hostsupdater')
         config.hostsupdater.aliases = settings['sites'].map { |site| site['map'] }
+    elsif Vagrant.has_plugin?('vagrant-hostmanager')
+        config.hostmanager.enabled = true
+        config.hostmanager.manage_host = true
+        config.hostmanager.aliases = settings['sites'].map { |site| site['map'] }
     end
 end
