Updated from upstream (#23)
* add Symfony4 nginx configuration (#600)

* add Symfony4 nginx configuration

* add aliases for symfony4

* ✨ 💡 Make sure not use the `Code` subfolder in vagrant, should use top level (#601)

There is no reason to add another folder inside vagrant that we map our projects to. This change will elimnate sites being placed in `/home/vagrant/Code/` and place them in `/home/vagrant/`

* The safer, the better (#613)

Any link that can be HTTPS, should be HTTPS :closed_lock_with_key:

* Add nginx config for Elgg sites (#616)

Adds template shell config to easily bootstrap Elgg sites on Homestead.

Fixes #615

* ✨ ❄️ 💡 Add support for multiple versions of PHP (#621)

* 💎 🔖 Tagging v6.0.0

* 🚑 🚀 When configuring apache always ensure mod_rewrite is enabled (#622)

* 💎 🔖 Tagging 6.0.1

* 🚑 Fixing site params not being read correctly from serve scripts (#626)

While debugging #625 I noticed params weren't being set correctly because we added the php version to the site params bumping the params to $6 instead of $5

* ❄️ 🚑 ✅ Make command should respect Homestead config example file (#624)

* ❄️ 🚑 ✅ Make command should respect Homestead config example file

The make command should now correctly copy over all site options and folder options from an existing example file.

* Apply fixes from StyleCI (#623)

* Contributions to #624 (#627)

* Restore docblocks formatting

This allows to maintain consistency with the docblocks style from the
repositories laravel/laravel and laravel/framework.

* Add more tests for shared folders configuration

* 💎 🔖 Tagging 6.0.2

* 🚑 Disable apparmor when installing mariadb so it won't cause issues w/ restart (#636)

* 💎 🔖 Tagging 6.0.3

* allow serve functions to specify a php version (#631)

a little bug introduced by the recent ability to specify PHP verions.

the `serve` functions are currently failing because they do not specify a PHP version, and there is no

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,14 @@
 ## Generated files
 #
 /.vagrant
-/files
+/files/*
+/homestead/files/config/*
 /vendor
 phpunit.xml
+/Homestead.yaml
+/Homestead.json
+/after.sh
+/aliases
+/mysqldump.sql.gz
+/mysql_backup
+/postgres_backup
