--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
 language: php
 
 php:
-  - 7.0
   - 7.1
   - 7.2
 
 before_script:
   - phpenv config-rm xdebug.ini
+  - composer config github-oauth.github.com ${COMPOSER_TOKEN}
   - composer install --no-interaction
+  - ./init.sh
 
 script:
   - vendor/bin/phpunit
@@ -18,5 +19,3 @@ matrix:
       env: dependencies=lowest
   allow_failures:
     - php: 5.6
-    - php: 7.2
-
