--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,14 @@
     ],
     "require": {
         "php": "^5.6 || ^7.0",
-        "symfony/console": "~2.3|~3.0|~4.0",
-        "symfony/process": "~2.3|~3.0|~4.0",
-        "symfony/yaml": "~2.3|~3.0|~4.0",
+        "symfony/console": "~3.3|~4.0",
+        "symfony/process": "~3.3|~4.0",
+        "symfony/yaml": "~3.3|~4.0",
         "pod-point/coding-standards": "^1.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^5.7 || ^6.0"
+        "phpunit/phpunit": "^5.7 || ^6.0",
+        "phly/changelog-generator": "^2.2"
     },
     "license": "MIT",
     "authors": [
