--- a/resources/Homestead.yaml
+++ b/resources/Homestead.yaml
@@ -1,9 +1,8 @@
 ---
 ip: "192.168.10.10"
-memory: 4096
-cpus: 2
+memory: 2048
+cpus: 1
 provider: virtualbox
-elasticsearch: true
 
 authorize: ~/.ssh/id_rsa.pub
 
@@ -11,64 +10,15 @@ keys:
     - ~/.ssh/id_rsa
 
 folders:
-    - map: {codeRepositoryPath}
+    - map: ~/code
       to: /home/vagrant/code
-      type: "nfs"
-    - map: {vendorPath}
-      to: /home/vagrant/vendor
-      type: "nfs"
-    - map: {vendorPath}/../files/custom
-      to: /home/vagrant/config
-      type: "nfs"
 
 sites:
-    # API 3
-    - map: api3.test
-      to: /home/vagrant/code/api3/public
-    # Auth Service
-    - map: auth-service.test
-      to: /home/vagrant/code/auth-service/public
-    # Contractors Tool
-    - map: contractors-tool.test
-      to: /home/vagrant/code/contractors-tool/public
-    # Dashboard API
-    - map: dashboard-api.test
-      to: /home/vagrant/code/dashboard-api/public
-    # Dealerships Tool
-    - map: dealerships-tool.test
-      to: /home/vagrant/code/dealerships-tool/public
-    # Installs Reporting
-    - map: installs-reporting.test
-      to: /home/vagrant/code/installs-reporting/public
-    # Install tools - Ordering tools
-    - map: installs-tool.test
-      to: /home/vagrant/code/installs-tool/public
-    # Install tools - Renault
-    - map: installs-tool-renault.test
-      to: /home/vagrant/code/renault/public
-    # MIS
-    - map: admin-tool.test
-      to: /home/vagrant/code/admin-tool/public
-    # OCPP Service
-    - map: ocpp-service.test
-      to: /home/vagrant/code/ocpp-service/public
-    # Pod Comms Service
-    - map: pod-comms-service.test
-      to: /home/vagrant/code/pod-comms-service/public
-    # POD Point - Web
-    - map: pod-point.test
-      to: /home/vagrant/code/pod-point.com/public
-    # POD Point - Web Craft CMS
-    - map: craft.test
-      to: /home/vagrant/code/pod-point.com/public
-    # Open Charge Web App
-    - map: opencharge-web-app.test
-      to: /home/vagrant/code/opencharge-web-app/public
+    - map: homestead.test
+      to: /home/vagrant/code/public
 
-ports:
-    - send: 9200
-      to: 9200
-
+databases:
+    - homestead
 
 # blackfire:
 #     - id: foo
